# qt-qml-cpp-polygons

./: .gitignore  CMakeLists.txt  README.md  progress.md
PolygonsMap/include/public/shapes/: PolygonItem.h
PolygonsMap/resources/qml/: main.qml
include/public/geometry/: Geometry.h
include/public/helpers/: OtherFunctions.h
include/public/json/: JsonUtils.h  Serialization.h
include/public/models/: PolygonPointModel.h
include/public/scene/: CustomGraphicsScene.h  CustomScene.h  SceneItem.h  SceneUtils.h
include/public/shapes/: DraggableEllipse.h  PolygonBuilder.h  PolygonItem.h
include/public/view/: CustomGraphicsView.h
resources/: qml.qrc
resources/qml/: ToggleButton.qml  main.qml
src/: main.cpp
src/geometry/: Geometry.cpp
src/helpers/: OtherFunctions.cpp
src/json/: JsonUtils.cpp
src/model/: PolygonPointModel.cpp
src/scene/: CustomGraphicsScene.cpp  CustomScene.cpp  SceneItem.cpp  SceneUtils.cpp
src/shapes/: DraggableEllipse.cpp  PolygonBuilder.cpp  PolygonItem.cpp
src/view/: CustomGraphicsView.cpp
